--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
   }
 
   h1 {
-    @apply mx-auto max-w-4xl text-center text-5xl font-bold leading-tight tracking-[-1%] text-white sm:text-[64px] sm:leading-[76px];
+    @apply mx-auto max-w-4xl text-center font-bold leading-tight tracking-[-1%] text-white text-3xl leading-snug sm:text-5xl sm:leading-tight lg:text-[64px] lg:leading-[76px];;
   }
 
   h2 {
@@ -39,11 +39,15 @@
   }
 
   header {
-    @apply sm:mt-4 mt-1;
+    @apply mt-8 sm:mt-10 md:mt-12 lg:mt-14;
   }
 
   header img {
-    @apply w-full max-w-lg h-auto object-contain mx-auto drop-shadow-md;
+    @apply w-full h-auto object-contain mx-auto drop-shadow-md
+         max-w-[240px]   /* default mobile */
+         sm:max-w-[320px] 
+         md:max-w-[420px] 
+         lg:max-w-lg;
   }
 }
 
@@ -64,7 +68,7 @@
     }
 
     & ul li {
-      @apply min-w-[230px] flex flex-row items-center;
+      @apply min-w-[150px] sm:min-w-[200px] lg:min-w-[230px] flex items-center;
     }
 
     & ul li p {
@@ -96,7 +100,7 @@
     @apply space-y-9;
 
     & ul {
-      @apply grid grid-cols-1 gap-5 xs:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
+      @apply grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
     }
   }
 
@@ -193,6 +197,18 @@
 .sideBarContent {
   padding: 1rem;
   color: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.bgOverlay{
+  position: fixed;
+  inset: 0;
+  background: transparent;
+  opacity: 0;
+  z-index: 40;
 }
 
 /* Larger screens can make it narrower or styled differently */
@@ -214,9 +230,30 @@
 
 @utility fancy-text {
   -webkit-text-stroke: 5px rgba(206, 206, 251, 0.5);
-  font-size: 190px;
   font-family: "Bebas Neue", sans-serif;
+  font-size: 96px;        /* mobile */
+  line-height: 1;         /* keep tight */
 }
+
+@screen sm {
+  .fancy-text {
+    font-size: 128px;
+  }
+}
+
+@screen md {
+  .fancy-text {
+    font-size: 160px;
+  }
+}
+
+@screen lg {
+  .fancy-text {
+    font-size: 190px;
+  }
+}
+
+
 
 @utility hide-scrollbar {
   -ms-overflow-style: none;
